# usg-jit-ldap-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHARTER.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  config.dev.toml  config.example.toml  deny.toml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
deploy/: ldap-server.service
docs/architecture/: README.md  data-flow.md  nist-control-mapping.md  replication-topology.md  security-invariants.md  threat-model.md  trust-boundaries.md
docs/architecture/decisions/: adr-001-ldaps-only.md  adr-002-postgresql-only.md  adr-003-hub-spoke-replication.md  adr-004-ephemeral-passwords.md  adr-005-minimal-ldapv3-ops.md  adr-006-rust-minimal-deps.md
docs/compliance/: README.md  nist-traceability-matrix.md  risk-assessment-inputs.md  system-security-plan-inputs.md  test-evidence.md
docs/deployment/: README.md  hardening.md
docs/operations/: README.md  audit-forwarding.md  certificate-rotation.md  database-failover.md  incident-response.md  monitoring.md  replication-recovery.md
docs/protocol/: README.md
docs/replication/: README.md  failure-modes.md
docs/security/: README.md  abuse-cases.md  audit-strategy.md  code-review-checklist.md  implementation-phases.md  nist-sp800-53-rev5-mapping.md  operational-security.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode_filter.rs  fuzz_decode_frame.rs  fuzz_decode_ldap_message.rs  fuzz_decode_length.rs  fuzz_parse_passwd_modify.rs
migrations/: 00001_identity_schema.sql  00002_runtime_schema.sql  00003_search_rate_limit.sql  00004_central_replication_log.sql  00005_bind_ip_rate_limit.sql  00006_replication_integrity.sql  00007_user_require_client_cert.sql
scripts/: dev-setup.sh  publish.sh  seed-data.sql  smoke-test.sh
src/: admin.rs  config.rs  lib.rs  main.rs  tls.rs
src/audit/: events.rs  mod.rs
src/auth/: mod.rs  password.rs  rate_limit.rs
src/db/: identity.rs  mod.rs  pool.rs  runtime.rs
src/ldap/: bind.rs  codec.rs  mod.rs  password.rs  search.rs  session.rs
src/replication/: health.rs  mod.rs  puller.rs
tests/: .gitignore  bind_lifecycle.rs  concurrent_bind.rs  password_expiry.rs  tls_enforcement.rs
tests/adversarial/: README.md  brute_force.py  connection_flood.py  malformed_ber.py  tls_downgrade.py
tests/common/: mod.rs
tests/e2e/: config.e2e.toml  init-db.sh  insert-test-password.sql  run-e2e-tests.sh
