[package]
name = "usg-jit-ldap-server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.usg-jit-ldap-server]
path = ".."

[[bin]]
name = "fuzz_decode_frame"
path = "fuzz_targets/fuzz_decode_frame.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decode_ldap_message"
path = "fuzz_targets/fuzz_decode_ldap_message.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decode_filter"
path = "fuzz_targets/fuzz_decode_filter.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_passwd_modify"
path = "fuzz_targets/fuzz_parse_passwd_modify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decode_length"
path = "fuzz_targets/fuzz_decode_length.rs"
test = false
doc = false
